# senax-encoder

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pack-specification.md  specification.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: core.rs  features.rs  lib.rs
tests/: attributes_test.rs  bigdecimal_test.rs  disabled_test.rs  float_string_format_test.rs  i128_cross_decode_test.rs  pack_unpack_test.rs  rawvalue_test.rs  simple_pack_test.rs  values_test.rs
