[package]
name = "senax-encoder-derive"
version = "0.1.2"
edition = "2021"
description = "A fast, compact, and schema-evolution-friendly binary serialization library for Rust."
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yossyX/senax-encoder"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
crc32fast = "1.3"
itertools = "0.13.0"
